[package]
name = "axnet"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "ArceOS network module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axnet"
documentation = "https://rcore-os.github.io/arceos/axnet/index.html"

[features]
smoltcp = []

# 启用ip协议与否
ip = []

default = ["smoltcp"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.9"
anyhow = {version = "1.0.31",default-features = false}
byteorder = {version = "1.3.2", default-features = false}
thiserror-no-std = "2.0.2"
paste = "1.0.14"
driver_net = { path = "../../crates/driver_net" }
lazy_init = { path = "../../crates/lazy_init" }
axerrno = { path = "../../crates/axerrno" }
axhal = { path = "../axhal" }
axsync = { path = "../axsync" }
axtask = { path = "../axtask" }
axdriver = { path = "../axdriver", features = ["net"] }
axio = { path = "../../crates/axio" }

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "2ade274"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns",
  # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  # "assembler-max-segment-count-32",
]
